--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,17 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>Learnangular5</title>
+  <meta charset="utf-8" />
+  <link rel="shortcut icon" href="smallMorBargigSig.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <meta
+    name="description"
+    content="Web site For CV Developed by Mor Bargig"
+  />
+  <link rel="apple-touch-icon" href="smallMorBargigSig.png" />
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <title>Weather App Angular</title>
 
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
